restaurant_BE/restaurant/restaurant/src/main/java/restaurant/example/restaurant/util/error/IdInvalidException.java
package restaurant.example.restaurant.util.error;

// khai báo  exception 
public class IdInvalidException extends Exception {
    // Constructor that accepts a message
    public IdInvalidException(String message) {
        super(message);
    }
}
